--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Meine Krasse Webseite</title>
+        <meta name="description" content="Diese Webseite ist in meiner Schulzeit endstanden als wir HTML gelernt haben.">
+        <meta name="keywords" content="OLA, HTML, Sonnensystem"/>
+        <meta name="author" content="Iven"/>
     </head>
     <body>
         <h1>Hallo Welt!</h1>
         <h2>Ivens Krasse Webseite</h2>
         <p>Das hier ist eine Test Webseite von mir lol</p>
+        <h1>Das Sonnensystem</h1>
+        <h2>Die 8 Planeten unseres Sonnensystems</h2>
+        <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
     </body>
 </html>
