--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <h1>Das Sonnensystem</h1>
         <h2>Die 8 Planeten unseres Sonnensystems</h2>
         <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
+        <img src="smiley.png" alt="Hier wäre ein Smiley">
     </body>
 </html>
