--- a/index.html
+++ b/index.html
@@ -15,5 +15,24 @@
         <h2>Die 8 Planeten unseres Sonnensystems</h2>
         <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
         <img src="smiley.png" alt="Hier wäre ein Smiley">
+        <ol>
+            <li>Merkur</li>
+            <li>Venus</li>
+            <li>Erde</li>
+            <li>Mars</li>
+            <li>Jupiter</li>
+            <li>Saturn</li>
+            <li>Uranus</li>
+            <li>Neptun</li>
+        </ol>
+        <h2>Uranus</h2>
+        <ul>
+            <li><b>Durchmesser:</b> 51.118 Kilometer</li>
+            <li><b>Abstand zur Sonne:</b> 2871 Millionen Kilometer</li>
+            <li><b>Masse:</b> 14,5 Erdmassen</li>
+            <li><b>Umlaufzeit (um die Sonne ):</b> 83,8 Erdenjahre</li>
+            <li><b>Monde:</b> 27</li>
+            <li><b>Rekorde:</b> Ausgefallenste Jahreszeiten: Weil Uranus' Nordpol auf die Sonne zeigt, bleibt es dort im Sommer rund 40 Jahre lang hell. Vielleicht regnet es auch Diamanten. Forscher glauben, die Steine könnten sich in der Atmosphäre aus Methangas bilden.</li>
+        </ul>
     </body>
 </html>
