--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         <meta name="description" content="Diese Webseite ist in meiner Schulzeit endstanden als wir HTML gelernt haben.">
         <meta name="keywords" content="OLA, HTML, Sonnensystem"/>
         <meta name="author" content="Iven"/>
+        <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
-        <h1>Hallo Welt!</h1>
+        <h1 class="bg-lightcoral">Hallo Welt!</h1>
         <h2>Ivens Krasse Webseite</h2>
         <p>Das hier ist eine Test Webseite von mir lol</p>
         <h1>Das Sonnensystem</h1>
         <h2>Die 8 Planeten unseres Sonnensystems</h2>
         <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
-        <img src="smiley.png" alt="Hier wäre ein Smiley">
+        <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
         <ol>
             <li>Merkur</li>
             <li>Venus</li>
@@ -25,7 +26,7 @@
             <li>Uranus</li>
             <li>Neptun</li>
         </ol>
-        <h2>Uranus</h2>
+        <h2 class="blau">Uranus</h2>
         <ul>
             <li><b>Durchmesser:</b> 51.118 Kilometer</li>
             <li><b>Abstand zur Sonne:</b> 2871 Millionen Kilometer</li>
