--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Das Sonnensystem</h1>
         <h2>Die 8 Planeten unseres Sonnensystems</h2>
         <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
-        <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+        <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
         <ol>
             <li>Merkur</li>
             <li>Venus</li>
