--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <h1>Das Sonnensystem</h1>
         <h2>Die 8 Planeten unseres Sonnensystems</h2>
         <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
+        
+<audio controls autoplay>
+    <source src="assets/musik/Deep.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
         <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
         <ol>
             <li>Merkur</li>
