HTML5 header, nav, main und footer

--- a/index.html
+++ b/index.html
@@ -7,38 +7,52 @@
         <meta name="keywords" content="OLA, HTML, Sonnensystem"/>
         <meta name="author" content="Iven"/>
         <link rel="stylesheet" href="assets/css/styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1 class="bg-lightcoral">Hallo Welt!</h1>
-        <h2>Ivens Krasse Webseite</h2>
-        <p>Das hier ist eine Test Webseite von mir lol</p>
-        <h1>Das Sonnensystem</h1>
-        <h2>Die 8 Planeten unseres Sonnensystems</h2>
-        <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
-        
-<audio controls autoplay>
-    <source src="assets/musik/Deep.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-        <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-        <ol>
-            <li>Merkur</li>
-            <li>Venus</li>
-            <li>Erde</li>
-            <li>Mars</li>
-            <li>Jupiter</li>
-            <li>Saturn</li>
-            <li>Uranus</li>
-            <li>Neptun</li>
-        </ol>
-        <h2 class="blau">Uranus</h2>
-        <ul>
-            <li><b>Durchmesser:</b> 51.118 Kilometer</li>
-            <li><b>Abstand zur Sonne:</b> 2871 Millionen Kilometer</li>
-            <li><b>Masse:</b> 14,5 Erdmassen</li>
-            <li><b>Umlaufzeit (um die Sonne ):</b> 83,8 Erdenjahre</li>
-            <li><b>Monde:</b> 27</li>
-            <li><b>Rekorde:</b> Ausgefallenste Jahreszeiten: Weil Uranus' Nordpol auf die Sonne zeigt, bleibt es dort im Sommer rund 40 Jahre lang hell. Vielleicht regnet es auch Diamanten. Forscher glauben, die Steine könnten sich in der Atmosphäre aus Methangas bilden.</li>
-        </ul>
+        <header class="bg-lightcoral">
+        <h1>Hallo Welt!</h1>
+        </header>
+        <nav>
+
+        </nav>
+        <main>
+            <h2>Ivens Krasse Webseite</h2>
+            <p>Das hier ist eine Test Webseite von mir lol</p>
+            <h1>Das Sonnensystem</h1>
+            <h2>Die 8 Planeten unseres Sonnensystems</h2>
+            <p>Unser Sonnensystem besteht aus der Sonne, ihren acht Planeten und deren Monden, den Zwergplaneten und Millionen von Kleinkörpern</p>
+            
+    <audio controls autoplay>
+        <source src="assets/musik/Deep.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <ol>
+                <li>Merkur</li>
+                <li>Venus</li>
+                <li>Erde</li>
+                <li>Mars</li>
+                <li>Jupiter</li>
+                <li>Saturn</li>
+                <li>Uranus</li>
+                <li>Neptun</li>
+            </ol>
+            <h2 class="blau">Uranus</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 51.118 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 2871 Millionen Kilometer</li>
+                <li><b>Masse:</b> 14,5 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 83,8 Erdenjahre</li>
+                <li><b>Monde:</b> 27</li>
+                <li><b>Rekorde:</b> Ausgefallenste Jahreszeiten: Weil Uranus' Nordpol auf die Sonne zeigt, bleibt es dort im Sommer rund 40 Jahre lang hell. Vielleicht regnet es auch Diamanten. Forscher glauben, die Steine könnten sich in der Atmosphäre aus Methangas bilden.</li>
+            </ul>
+        </main>
+       <footer class="footer-section">
+           <div class="container copyright">
+                &copy; Iven 2021-2022 All rights reserved
+            </div>
+       </footer>
     </body>
 </html>
