jeder Planet seine eigene Seite

--- a/erde.html
+++ b/erde.html
@@ -16,10 +16,10 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
-                <li><a href="erde.html">Erde</a></li>
+                <li><a href="erde.html" class="activ">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
                 <li><a href="jupiter.html">Jupiter</a></li>
                 <li><a href="saturn.html">Saturn</a></li>
@@ -28,9 +28,16 @@
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Erde</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 12.756 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 149,6 Millionen Kilometer</li>
+                <li><b>Masse:</b> 1 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 365 Erdentage</li>
+                <li><b>Monde:</b> 1</li>
+                <li><b>Rekorde:</b> Die Erde ist der einzige Planet, auf dem es Leben gibt. Außerdem gibt es festes, flüssiges und gasförmiges Wasser und manchmal eine spektakuläre Sonnenfinsternis, bei der die Sonne haargenau hinter dem Mond verschwindet.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
