--- a/mars.html
+++ b/mars.html
@@ -16,11 +16,11 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
-                <li><a href="mars.html">Mars</a></li>
+                <li><a href="mars.html" class="activ">Mars</a></li>
                 <li><a href="jupiter.html">Jupiter</a></li>
                 <li><a href="saturn.html">Saturn</a></li>
                 <li><a href="uranus.html">Uranus</a></li>
@@ -28,9 +28,16 @@
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Mars</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 6794 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 227,9 Millionen Kilometer</li>
+                <li><b>Masse:</b> 0,107 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 687 Erdentage</li>
+                <li><b>Monde:</b> 2</li>
+                <li><b>Rekorde:</b> Der 27 Kilometer hohe Mons Olympus ist der höchste Berg im Sonnensystem, die mehr als acht Kilometer tiefen Valles Marineris auf dem Mars sind das größte Grabensystem. Auch extrem: tornadoartige Staubwirbel von einem Kilometer Durchmesser.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
