--- a/merkur.html
+++ b/merkur.html
@@ -16,8 +16,8 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
-                <li><a href="merkur.html">Merkur</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="merkur.html" class="activ">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
@@ -28,9 +28,16 @@
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Merkur</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 4879 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 57,9 Millionen Kilometer</li>
+                <li><b>Masse:</b> 0,055 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 88 Erdentage</li>
+                <li><b>Monde:</b> 0</li>
+                <li><b>Rekorde:</b> Auf dem kleinsten Planeten unseres Sonnensystems herrschen die größten Temperaturunterschiede zwischen Tag und Nacht: über 500 Grad! Auch kurios: Merkur schrumpft langsam, weil er einen großen Eisenkern hat, der sich zusammenzieht.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
