--- a/jupiter.html
+++ b/jupiter.html
@@ -16,21 +16,28 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
-                <li><a href="jupiter.html">Jupiter</a></li>
+                <li><a href="jupiter.html" class="activ">Jupiter</a></li>
                 <li><a href="saturn.html">Saturn</a></li>
                 <li><a href="uranus.html">Uranus</a></li>
                 <li><a href="neptun.html">Neptun</a></li>
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Jupiter</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 142.984 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 779 Millionen Kilometer</li>
+                <li><b>Masse:</b> 317,8 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 11,9 Erdenjahre</li>
+                <li><b>Monde:</b> mindestens 63</li>
+                <li><b>Rekorde:</b> Der größte Planet hat die kürzesten Tage (9,8 Stunden) und den langlebigsten Sturm - sein Großer Roter Fleck (rechts unten) wirbelt seit 340 Jahren! Außerdem hat Jupiter vermutlich die meisten Monde und mit Ganymed den größten.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
