--- a/neptun.html
+++ b/neptun.html
@@ -16,7 +16,7 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
@@ -24,13 +24,20 @@
                 <li><a href="jupiter.html">Jupiter</a></li>
                 <li><a href="saturn.html">Saturn</a></li>
                 <li><a href="uranus.html">Uranus</a></li>
-                <li><a href="neptun.html">Neptun</a></li>
+                <li><a href="neptun.html" class="activ">Neptun</a></li>
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Neptun</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 49.528 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 4495 Millionen Kilometer</li>
+                <li><b>Masse:</b> 17,1 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne):</b> 163,8 Erdenjahre</li>
+                <li><b>Monde:</b> 13</li>
+                <li><b>Rekorde:</b> Keiner ist sonnenferner. Doch über Neptun fegen auch die stärksten Stürme, mit Böen von über 2000 Kilometer pro Stunde. Ebenfalls toll: die Eisvulkane auf dem Mond Triton. Sie speien minus 220 Grad kalten Stickstoff aus.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
