--- a/saturn.html
+++ b/saturn.html
@@ -16,21 +16,28 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
                 <li><a href="jupiter.html">Jupiter</a></li>
-                <li><a href="saturn.html">Saturn</a></li>
+                <li><a href="saturn.html" class="activ">Saturn</a></li>
                 <li><a href="uranus.html">Uranus</a></li>
                 <li><a href="neptun.html">Neptun</a></li>
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Saturn</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 120.536 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 1433 Millionen Kilometer</li>
+                <li><b>Masse:</b> 95,2 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 29,5 Erdenjahre</li>
+                <li><b>Monde:</b> mindestens 61</li>
+                <li><b>Rekorde:</b> Der Saturn besitzt ein einzigartiges Ringsystem und die größten Eiskugeln: Einige der Saturnmonde bestehen ganz aus gefrorenem Wasser. Blitze auf dem Saturn sind eine Million Mal stärker als auf der Erde und bis zu 100 Meter breit.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
