--- a/uranus.html
+++ b/uranus.html
@@ -16,21 +16,28 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
                 <li><a href="venus.html">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
                 <li><a href="jupiter.html">Jupiter</a></li>
                 <li><a href="saturn.html">Saturn</a></li>
-                <li><a href="uranus.html">Uranus</a></li>
+                <li><a href="uranus.html" class="activ">Uranus</a></li>
                 <li><a href="neptun.html">Neptun</a></li>
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Uranus</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 51.118 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 2871 Millionen Kilometer</li>
+                <li><b>Masse:</b> 14,5 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 83,8 Erdenjahre</li>
+                <li><b>Monde:</b> 27</li>
+                <li><b>Rekorde:</b> Ausgefallenste Jahreszeiten: Weil Uranus' Nordpol auf die Sonne zeigt, bleibt es dort im Sommer rund 40 Jahre lang hell. Vielleicht regnet es auch Diamanten. Forscher glauben, die Steine könnten sich in der Atmosphäre aus Methangas bilden.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
