--- a/venus.html
+++ b/venus.html
@@ -16,9 +16,9 @@
         </header>
         <nav>
             <ul class="box">
-                <li><a href="index.html" class="activ">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="merkur.html">Merkur</a></li>
-                <li><a href="venus.html">Venus</a></li>
+                <li><a href="venus.html" class="activ">Venus</a></li>
                 <li><a href="erde.html">Erde</a></li>
                 <li><a href="mars.html">Mars</a></li>
                 <li><a href="jupiter.html">Jupiter</a></li>
@@ -28,9 +28,16 @@
             </ol>
         </nav>
         <main>
-            <img class="bild animated flip" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
-            <h2 class="blau">Home</h2>
-            <p>Hier sind alle Infos zu unser Planeten</p>
+            <img class="bild" src="assets/img/smiley.png" alt="Hier wäre ein Smiley">
+            <h2 class="blau">Venus</h2>
+            <ul>
+                <li><b>Durchmesser:</b> 12.104 Kilometer</li>
+                <li><b>Abstand zur Sonne:</b> 108,2 Millionen Kilometer</li>
+                <li><b>Masse:</b> 0,815 Erdmassen</li>
+                <li><b>Umlaufzeit (um die Sonne ):</b> 225 Erdentage</li>
+                <li><b>Monde:</b> 0</li>
+                <li><b>Rekorde:</b> Der wohl höllischste Planet: Durch die dichte Atmosphäre aus Kohlendioxid steigen die Temperaturen auf der Venus am Tag auf 460 Grad. Aus dicken Wolken fällt Regen aus ätzender Schwefelsäure, und der Boden ist mit Vulkanen übersät.</li>
+            </ul>
         </main>
        <footer class="footer-section">
            <div class="container copyright">
